Fix heights, alignment

--- a/src/index.css
+++ b/src/index.css
@@ -167,7 +167,7 @@ input {
 	width: 90%;
 	height: 90%;
 	max-width: 800px;
-	min-height: 200px;
+	min-height: 250px;
 	max-height: 300px;
 	margin-bottom: 23px;
 	background-color: white;
@@ -240,12 +240,12 @@ form {
 	border-top: 1px solid black;
 	margin-top: 10px;
 	flex: 1 1 400;
+	height: 100%;
 	box-sizing: border-box;
 }
 
 @media (max-width: 1023px) {
 	#displaycontainer {
-		height: 100%;
 		flex-direction: column;
 	}
 }
@@ -273,6 +273,7 @@ form {
 
 #haikucontainer {
 	padding: 12px;
+	padding-left: 24px;
 	flex: 1 1 30%;
 	box-sizing: border-box;
 	border-left: 1px solid black;
@@ -280,6 +281,7 @@ form {
 
 @media (max-width: 1023px) {
 	#haikucontainer {
+		padding-left: 12px;
 		flex-basis: 50%;
 		width: 100%;
 		border-left-width: 0px;
@@ -338,13 +340,13 @@ form {
 	height: 100%;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
 	justify-content: space-around;
 }
 
 @media (max-width: 1023px) {
 	#bonushaiku {
 		flex-direction: row;
+		align-items: center;
 		justify-content: space-between;
 	}
 }
